fix add matrix